Fix footer icons layout on smaller screens

--- a/_sass/hazmatdrone.scss
+++ b/_sass/hazmatdrone.scss
@@ -183,11 +183,15 @@ a:hover {
 
 // Footer and footer content
 footer {
-	justify-content: space-between;
+	justify-content: center;
 	margin-left: auto;
 	margin-right: auto;
-	width: 35%;
 	padding: 0;
+}
+
+footer > .bubble-outer, footer > .bubble-container {
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .bubble-container {
